# python-agentic-ai-lab

./: main.py  pyproject.toml
FDE/docs/: 1FolderStructure.md  2TypeHints.md
agenticAiLab/: prompts.py
agenticAiLab/1-callingGenAiApisAndToolCalling/: day2_LlmAsAJudgeWithoutTools.py  toolCalling.py
agenticAiLab/2-openAiSdkImplementation/: implementation1Simple.py  implementation2multipleagentsStreaming.py  implementation5MultipleLlmsHandoffs.py  implementation6GuardRails.py
agenticAiLab/2-openAiSdkImplementation/implementation7DeepResearch/: deepResearch.py  main.py  orchestratorAgent.py
agenticAiLab/3-langGraphImplementation/: checkpoints.sqlite  day1-simpleImplementation.py  day2-simpleImplementationWithLlm.py  day3-implementationOfTooling.py  day4-implementationOfMemoryAndTooling.py  day5-implementationOfPlaywrightTool.py  simpleImplementation.py
agenticAiLab/callingGenAiApis/: Day1-parallelApiCalls.py  __init__.py  day1_parallelApiCalls.py  day2_LlmAsAJudge.py  day2_pdfReaderWorkflow.py  day3_LlmAsAJudgeWithTools.py  main.py
agenticAiLab/callingGenAiApisAndToolCalling/: day1_parallelApiCalls.py
agenticAiLab/docs/: generalInfo.md  langraph.md  openAiSdkImplementation.md
agenticAiLab/docs/general/: Day2-ToolUse.md  (+1 more)
agenticAiLab/openAiSdkImplementation/: implementation2multipleagentsStreaming.py  implementation3tooling.py  implementation4Handoffs.py  implementation5MultipleLlmsHandoffs.py  simpleImplementation.py
docs/designPatterns/: LLMWorkflowDesignPatterns.md
pythonLab/docs/: ApiCallsAndEventLoop.md  contextManagerAndYield.md  generalInfo.md
(+8 files in other folders)
