[project]
name = "python-agentic-ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "httpx>=0.28.1",
    "ipython>=9.7.0",
    "langchain>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.4",
    "openai>=2.7.2",
    "openai-agents[google,litellm]>=0.10.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
